--- a/pp02/App.xaml
+++ b/pp02/App.xaml
@@ -9,6 +9,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Themes/ComboBoxTheme.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="Themes/SearchField.xaml"></ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
 
             <DataTemplate DataType="{x:Type viewModel:DisplayViewModel}">
